--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "fs-extra": "^10.0.0",
     "gray-matter": "^4.0.3",
     "markdown-it": "^12.3.2",
-    "next": "12.0.8",
+    "next": "^12.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-responsive": "^9.0.0-beta.6",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4"
+    "semantic-ui-react": "^2.0.4",
+    "showdown": "^2.1.0"
   },
   "devDependencies": {
     "eslint": "8.7.0",
